Setup test skeleton including testcontainer for PostgreSQL